--- a/css/style.css
+++ b/css/style.css
@@ -1190,7 +1190,7 @@ ul.slider-pagi {padding-left:0px;}
   margin-bottom: 15px;
 }
 
-#contact_form p, .timetable p, .timetable td {font-family: 'Gloria Hallelujah', cursive;}
+#contact_form p, .timetable p, .first-time td {font-family: 'Gloria Hallelujah', cursive;}
 
 .first-time h5 {
   font-family: 'Lobster';
