changing some styling for the subscription form

--- a/css/style.css
+++ b/css/style.css
@@ -1209,6 +1209,18 @@ ul.slider-pagi {padding-left:0px;}
 	height: 400px;
 }
 
+/*===========================
+  Subscription
+============================ */
+.subscription-btn {
+  padding-left: 10px;
+}
+.subscription-btn .user-signup__submit {
+  padding: 0px;
+}
+
+
+
 
 /*===========================
   Footer
