--- a/css/style.css
+++ b/css/style.css
@@ -32,13 +32,11 @@ Last change:09/26/2016
   General and Typography
 ============================ */
 
-html, body{
+body{
 	font-family: 'Helvetica',sans-serif;
 	font-weight: 400;
 	color:#606060;
 	height:100%!important;
-  margin: 0px;
-  padding: 0px;
   overflow-x: hidden; 
 }
 
