trying a different html a nd body styling

--- a/css/style.css
+++ b/css/style.css
@@ -31,13 +31,16 @@ Last change:09/26/2016
 ===========================
   General and Typography
 ============================ */
+html {
+  height: 100%;
+  overflow-x: hidden
+}
 
 body{
 	font-family: 'Helvetica',sans-serif;
 	font-weight: 400;
 	color:#606060;
 	height:100%!important;
-  overflow-x: hidden; 
 }
 
 p{
