--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ body{
 	font-weight: 400;
 	color:#606060;
 	height:100%!important;
+  overflow-x: hidden;
 }
 
 p{
@@ -1554,6 +1555,7 @@ section{background:#fff;}
   text-align:center;
   white-space: nowrap;
   overflow: hidden;
+  border: none;
 }
 
 .nav.nav-tabs > li.active > a:hover,
